src/objects/CventEvents__LogConnector__c.object
<CustomObject>
    <description>Junction object for Log.</description>
    <fields>
        <fullName>CventEvents__Log__c</fullName>
        <label>Log</label>
        <referenceTo>CventEvents__Log__c</referenceTo>
        <relationshipLabel>Log Connectors</relationshipLabel>
        <relationshipName>LogConnectors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__RelatedRecordId__c</fullName>
        <description>Salesforce Id of the record related to the log.</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Id of the record related to the log.</inlineHelpText>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RelatedRecordName__c</fullName>
        <description>Name of the record related to the log.</description>
        <externalId>true</externalId>
        <inlineHelpText>Name of the record related to the log.</inlineHelpText>
        <label>Related Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RelatedRecordType__c</fullName>
        <description>Object type of the related record.</description>
        <label>Related Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RelatedRecord__c</fullName>
        <description>Hyperlink to the related record.</description>
        <formula>HYPERLINK(&apos;/&apos; + CventEvents__RelatedRecordId__c, IF( ISBLANK(CventEvents__RelatedRecordName__c) , CventEvents__RelatedRecordType__c, CventEvents__RelatedRecordType__c + &apos;: &apos; + CventEvents__RelatedRecordName__c))</formula>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <label>Log Connector</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Log__c</columns>
        <columns>CventEvents__RelatedRecord__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Log Connector Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Connectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>